ags (2.1.75)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed developer's handbook deprecated use of AgsGroupId, replaced by AgsRecallID
	* fixed developer's handbook deprecated use of AgsRecall ::resolve-dependencies(), it is now ::resolve-dependency()
	* improved ags_sound_card_editor_reset() to apply backend properly

ags (2.1.74)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-copy-pattern recall to proper free GError
	* fixed ags_recycling_finalize() to free AgsUUID
	* fixed ags_thread_finalize() to free AgsUUID and other memory-leaks
	* fixed potential SIGSEGV in ags_simple_file.c

ags (2.1.73)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented use g_error_free()
	* improved ref-count of AgsInput:file-link in ags_audio_open_file_as_channel()
	* improved ref-count of AgsInput:file-link in ags_open_sf2_instrument.c
	* improved ref-count of AgsInput:file-link in ags_open_sf2_sample.c
	* improved ref-count of AgsInput:file-link in ags_open_single_file.c
	* fixed potential SIGSEGV cause by attack larger than buffer size in ags_synth_generator.c

ags (2.1.72)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented OSC meter refresh rate option

ags (2.1.71)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed OSC server meter controller type tag boundaries
	* fixed potential SIGSEGV as expanding OSC meter path

ags (2.1.70)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing ags_sound_enums.h in API reference manual
	* fixed OSC server path in docs/oscBook/chap6.xml

ags (2.1.69)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.8.
	* fixed non thread-safe ags_audio_loop_get_type()
	* fixed non thread-safe ags_audio_thread_get_type()
	* fixed non thread-safe ags_channel_thread_get_type()
	* fixed non thread-safe ags_soundcard_thread_get_type()