@@ -95,7 +95,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-noinst_PROGRAMS = $(am__EXEEXT_1) $(am__EXEEXT_2) $(am__EXEEXT_3)
+@WITH_SYSTEM_TESTS_TRUE@noinst_PROGRAMS = $(am__EXEEXT_1) \
+@WITH_SYSTEM_TESTS_TRUE@	$(am__EXEEXT_2) $(am__EXEEXT_3)
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/ags-symbols.m4 \
