@@ -1,3 +1,8 @@
+ags (2.1.76)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved running integration tests using automake conditional
+
 ags (2.1.75)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
